--- a/Sourcypants.Tests/Sourcypants.Tests.csproj
+++ b/Sourcypants.Tests/Sourcypants.Tests.csproj
@@ -12,6 +12,6 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.9.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Blunder.SourceMap\Blunder.SourceMap.csproj" />
+    <ProjectReference Include="..\Sourcypants\Sourcypants.csproj" />
   </ItemGroup>
 </Project>
